Fix user domain
