# food-retail-marketplace/ardo-backend/docs/swagger.json
@@ -2138,16 +2138,31 @@
         "auth.RegisterIn": {
             "type": "object",
             "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "apartment": {
+                    "type": "string"
+                },
+                "deliveryComment": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
                 "firstName": {
                     "type": "string"
                 },
+                "floor": {
+                    "type": "string"
+                },
                 "lastName": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "phone": {
                     "type": "string"
                 },
                 "preferredLang": {
@@ -2852,16 +2867,31 @@
         "management_user.AddUserIn": {
             "type": "object",
             "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "apartment": {
+                    "type": "string"
+                },
+                "deliveryComment": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
                 "firstName": {
                     "type": "string"
                 },
+                "floor": {
+                    "type": "string"
+                },
                 "lastName": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "phone": {
                     "type": "string"
                 },
                 "preferredLang": {
